config/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-ai-gateway-dashboard
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
      backendRefs:
        - name: envoy-ai-gateway-dashboard
          kind: Service
          group: ""
          port: 3000
